website/tests/snapshots/types/intersections.exp
=== block 1 ===
Error ------------------------------------------------------------------------ -:21:6

Cannot call `func` with object literal bound to `value` because property `serialize` is missing in object literal [1]
but exists in `Serializable` [2]. [incompatible-type]

   -:21:6
   21| func({length: 3}); // Error! Doesn't implement both interfaces
            ^^^^^^^^^^^ [1]

References:
   -:10:22
   10| function func(value: Serializable & HasLength) {
                            ^^^^^^^^^^^^ [2]


Found 1 error

=== block 2 ===
No errors!

=== block 3 ===
No errors!

=== block 4 ===
Error ------------------------------------------------------------------------ -:9:20

Cannot assign `fn(...)` to `b` because `unknown` [1] is incompatible with boolean [2]. [incompatible-type]

   -:9:20
   9| const b: boolean = fn("boolean"); // Error!
                         ^^^^^^^^^^^^^

References:
   -:5:21
   5|   & ((x: string) => unknown);
                          ^^^^^^^ [1]
   -:9:10
   9| const b: boolean = fn("boolean"); // Error!
               ^^^^^^^ [2]


Found 1 error

=== block 5 ===
No errors!

=== block 6 ===
No errors!

=== block 7 ===
No errors!

=== block 8 ===
Error ------------------------------------------------------------------------ -:8:24

Cannot assign `both.prop` to `prop2` because number [1] is incompatible with boolean [2]. [incompatible-type]

   -:8:24
   8| const prop2: boolean = both.prop; // Error!
                             ^^^^^^^^^

References:
   -:2:19
   2| type One = {prop: number, ...};
                        ^^^^^^ [1]
   -:8:14
   8| const prop2: boolean = both.prop; // Error!
                   ^^^^^^^ [2]


Found 1 error

=== block 9 ===
No errors!

=== block 10 ===
Error ------------------------------------------------------------------------- -:6:6

Cannot call `func` with `3.14` bound to `value` because number [1] is incompatible with string [2]. [incompatible-type]

   -:6:6
   6| func(3.14); // Error!
           ^^^^ [1]

References:
   -:2:33
   2| type NumberAndString = number & string;
                                      ^^^^^^ [2]

Error ------------------------------------------------------------------------- -:7:6

Cannot call `func` with `'hi'` bound to `value` because string [1] is incompatible with number [2]. [incompatible-type]

   -:7:6
   7| func('hi'); // Error!
           ^^^^ [1]

References:
   -:2:24
   2| type NumberAndString = number & string;
                             ^^^^^^ [2]


Found 2 errors

=== block 11 ===
Error ------------------------------------------------------------------------- -:4:6

Cannot call `func` with object literal bound to `obj` because property `a` is extra in object literal [1] but missing in
object type [2]. Exact objects do not accept extra props. [incompatible-type]

   -:4:6
   4| func({a: 1}); // Error!
           ^^^^^^ [1]

References:
   -:2:34
   2| function func(obj: {a: number} & {b: string}) { /* ... */ }
                                       ^^^^^^^^^^^ [2]

Error ------------------------------------------------------------------------- -:4:6

Cannot call `func` with object literal bound to `obj` because property `b` is missing in object literal [1] but exists
in object type [2]. [incompatible-type]

   -:4:6
   4| func({a: 1}); // Error!
           ^^^^^^ [1]

References:
   -:2:34
   2| function func(obj: {a: number} & {b: string}) { /* ... */ }
                                       ^^^^^^^^^^^ [2]

Error ------------------------------------------------------------------------- -:5:6

Cannot call `func` with object literal bound to `obj` because property `a` is missing in object literal [1] but exists
in object type [2]. [incompatible-type]

   -:5:6
   5| func({b: 'hi'}); // Error!
           ^^^^^^^^^ [1]

References:
   -:2:20
   2| function func(obj: {a: number} & {b: string}) { /* ... */ }
                         ^^^^^^^^^^^ [2]

Error ------------------------------------------------------------------------- -:5:6

Cannot call `func` with object literal bound to `obj` because property `b` is extra in object literal [1] but missing in
object type [2]. Exact objects do not accept extra props. [incompatible-type]

   -:5:6
   5| func({b: 'hi'}); // Error!
           ^^^^^^^^^ [1]

References:
   -:2:20
   2| function func(obj: {a: number} & {b: string}) { /* ... */ }
                         ^^^^^^^^^^^ [2]

Error ------------------------------------------------------------------------- -:6:6

Cannot call `func` with object literal bound to `obj` because property `a` is extra in object literal [1] but missing in
object type [2]. Exact objects do not accept extra props. [incompatible-type]

   -:6:6
   6| func({a: 1, b: 'hi'}); // Error!
           ^^^^^^^^^^^^^^^ [1]

References:
   -:2:34
   2| function func(obj: {a: number} & {b: string}) { /* ... */ }
                                       ^^^^^^^^^^^ [2]

Error ------------------------------------------------------------------------- -:6:6

Cannot call `func` with object literal bound to `obj` because property `b` is extra in object literal [1] but missing in
object type [2]. Exact objects do not accept extra props. [incompatible-type]

   -:6:6
   6| func({a: 1, b: 'hi'}); // Error!
           ^^^^^^^^^^^^^^^ [1]

References:
   -:2:20
   2| function func(obj: {a: number} & {b: string}) { /* ... */ }
                         ^^^^^^^^^^^ [2]


Found 6 errors
